2010-01-19  Graham Cobb  <g+770@cobb.uk.net>

	* Makefile.am (libgpepimc_la_LDFLAGS): Set -version-info to 2:0:1 as 
	new functions have been added to the interface

	* gpe/pim-categories-ui.h: Add gpe_pim_categories_list_window
	Add gpe_pim_categories_reset_window
	Add gpe_pim_categories_from_window

	* ui.c (gpe_pim_categories_list): Split gpe_pim_categories_list_window out 
	of gpe_pim_categories_dialog
	(gpe_pim_categories_reset_window): Split gpe_pim_categories_reset_window out
	of gpe_pim_categories_dialog
	(gpe_pim_categories_from_window): Create gpe_pim_categories_from_window

2010-01-07  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c (gpe_pim_categories_dialog): Bring back OK button on Fremantle

2010-01-06  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c (gpe_pim_categories_dialog): HACK to workround Maemo5 bug with toggle rendering.

2009-10-04  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Check for Maemo version

	* ui.c (gpe_pim_categories_dialog): Remove Cancel button on Fremantle

2008-09-05  Graham Cobb  <g+770@cobb.uk.net>

	* debian/control: change binary package name to libgpepimc1

	* Makefile.am (libgpepimc_la_LDFLAGS): set -version-info to
	1:0:0 as these changes are incompatible with previous library
	version

	* internal.h: Move gpe_pim_category_delete to pim-categories.h
	Move struct gpe_pim_category from pim-categories.h

	* gpe/pim-categories.h: Move gpe_pim_category_delete from internal.h
	Move struct gpe_pim_category to internal.h

	* db.c (gpe_pim_categories_refresh): Add gpe_pim_categories_refresh.
	Also, make categories data structure opaque: gpe_pim_category_rename, 
	gpe_pim_category_set_colour and gpe_pim_category_delete update 
	in-memory categories; gpe_pim_categories_list returns list of category ids;
	gpe_pim_category_delete takes id, not category address.
	(check_table_update): remove unused variable declarations.
	

2008-06-14  Graham Cobb  <g+770@cobb.uk.net>

	* db.c (gpe_pim_categories_init): Add patch from Lars Persson Fink,