@@ -5,6 +5,8 @@ if HILDON
 PIMC_CFLAGS += -DIS_HILDON
 endif
 
+CFLAGS += -Wall
+
 INCLUDES = $(PIMC_CFLAGS) $(HILDON_CFLAGS) -DPACKAGE_LOCALE_DIR=\"@datadir@/locale/@PACKAGE_NAME@\"
 
 libgpepimc_la_LIBADD = @PIMC_LIBS@ @HILDON_LIBS@
